--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -8,6 +8,7 @@ header {
   }
 
   p:first-child {
+    min-height: 50px;
     font-size: 2.5em;
     font-weight: $bold;
   }
